Fix missing scrollbars

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -24,7 +24,6 @@ html, body {
   margin: 0;
   max-height: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 .layout-padding {
